tests/baselines/reference/parserRealSource12.errors.txt
==== tests/cases/conformance/parser/ecmascript5/parserRealSource12.ts (209 errors) ====
    // Copyright (c) Microsoft. All rights reserved. Licensed under the Apache License, Version 2.0. 
    // See LICENSE.txt in the project root for complete license information.
    
    ///<reference path='typescript.ts' />
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS6053: File 'typescript.ts' not found.
    
    module TypeScript {
        export interface IAstWalker {
            walk(ast: AST, parent: AST): AST;
                      ~~~
!!! error TS2304: Cannot find name 'AST'.
                                   ~~~
!!! error TS2304: Cannot find name 'AST'.
                                         ~~~
!!! error TS2304: Cannot find name 'AST'.
            options: AstWalkOptions;
            state: any; // user state object
        }
    
        export class AstWalkOptions {
            public goChildren = true;
            public goNextSibling = true;
            public reverseSiblings = false; // visit siblings in reverse execution order
    
            public stopWalk(stop:boolean = true) {
                this.goChildren = !stop;
                this.goNextSibling = !stop;
            }
        }
    
        export interface IAstWalkCallback {
            (ast: AST, parent: AST, walker: IAstWalker): AST;
                  ~~~
!!! error TS2304: Cannot find name 'AST'.
                               ~~~
!!! error TS2304: Cannot find name 'AST'.
                                                         ~~~
!!! error TS2304: Cannot find name 'AST'.
        }
    
        export interface IAstWalkChildren {
            (preAst: AST, parent: AST, walker: IAstWalker): void;
                     ~~~
!!! error TS2304: Cannot find name 'AST'.
                                  ~~~
!!! error TS2304: Cannot find name 'AST'.
        }
    
        class AstWalker implements IAstWalker {
            constructor (
                private childrenWalkers: IAstWalkChildren[],
                private pre: IAstWalkCallback,
                private post: IAstWalkCallback,
                public options: AstWalkOptions,
                public state: any) {
            }
    
            public walk(ast: AST, parent: AST): AST {
                             ~~~
!!! error TS2304: Cannot find name 'AST'.
                                          ~~~
!!! error TS2304: Cannot find name 'AST'.
                                                ~~~
!!! error TS2304: Cannot find name 'AST'.
                var preAst = this.pre(ast, parent, this);
                if (preAst === undefined) {
                    preAst = ast;
                }
                if (this.options.goChildren) {
                    var svGoSib = this.options.goNextSibling;
                    this.options.goNextSibling = true;
                    // Call the "walkChildren" function corresponding to "nodeType".
                    this.childrenWalkers[ast.nodeType](ast, parent, this);
                    this.options.goNextSibling = svGoSib;
                }
                else {
                    // no go only applies to children of node issuing it
                    this.options.goChildren = true;
                }
                if (this.post) {
                    var postAst = this.post(preAst, parent, this);
                    if (postAst === undefined) {
                        postAst = preAst;
                    }
                    return postAst;
                }
                else {
                    return preAst;
                }
            }
        }
    
        export class AstWalkerFactory {
            private childrenWalkers: IAstWalkChildren[] = [];
    
            constructor () {
                this.initChildrenWalkers();
            }
    
            public walk(ast: AST, pre: IAstWalkCallback, post?: IAstWalkCallback, options?: AstWalkOptions, state?: any): AST {
                             ~~~
!!! error TS2304: Cannot find name 'AST'.
                                                                                                                          ~~~
!!! error TS2304: Cannot find name 'AST'.
                return this.getWalker(pre, post, options, state).walk(ast, null)
            }
    
            public getWalker(pre: IAstWalkCallback, post?: IAstWalkCallback, options?: AstWalkOptions, state?: any): IAstWalker {
                return this.getSlowWalker(pre, post, options, state);
            }
    
            private getSlowWalker(pre: IAstWalkCallback, post?: IAstWalkCallback, options?: AstWalkOptions, state?: any): IAstWalker {
                if (!options) {
                    options = new AstWalkOptions();
                }
    
                return new AstWalker(this.childrenWalkers, pre, post, options, state);
            }
    
            private initChildrenWalkers(): void {
                this.childrenWalkers[NodeType.None] = ChildrenWalkers.walkNone;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.Empty] = ChildrenWalkers.walkNone;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.EmptyExpr] = ChildrenWalkers.walkNone;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.True] = ChildrenWalkers.walkNone;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.False] = ChildrenWalkers.walkNone;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.This] = ChildrenWalkers.walkNone;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.Super] = ChildrenWalkers.walkNone;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.QString] = ChildrenWalkers.walkNone;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.Regex] = ChildrenWalkers.walkNone;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.Null] = ChildrenWalkers.walkNone;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.ArrayLit] = ChildrenWalkers.walkUnaryExpressionChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.ObjectLit] = ChildrenWalkers.walkUnaryExpressionChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.Void] = ChildrenWalkers.walkUnaryExpressionChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.Comma] = ChildrenWalkers.walkBinaryExpressionChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.Pos] = ChildrenWalkers.walkUnaryExpressionChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.Neg] = ChildrenWalkers.walkUnaryExpressionChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.Delete] = ChildrenWalkers.walkUnaryExpressionChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.Await] = ChildrenWalkers.walkUnaryExpressionChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.In] = ChildrenWalkers.walkBinaryExpressionChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.Dot] = ChildrenWalkers.walkBinaryExpressionChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.From] = ChildrenWalkers.walkBinaryExpressionChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.Is] = ChildrenWalkers.walkBinaryExpressionChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.InstOf] = ChildrenWalkers.walkBinaryExpressionChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.Typeof] = ChildrenWalkers.walkUnaryExpressionChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.NumberLit] = ChildrenWalkers.walkNone;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.Name] = ChildrenWalkers.walkNone;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.TypeRef] = ChildrenWalkers.walkTypeReferenceChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.Index] = ChildrenWalkers.walkBinaryExpressionChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.Call] = ChildrenWalkers.walkCallExpressionChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.New] = ChildrenWalkers.walkCallExpressionChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.Asg] = ChildrenWalkers.walkBinaryExpressionChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.AsgAdd] = ChildrenWalkers.walkBinaryExpressionChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.AsgSub] = ChildrenWalkers.walkBinaryExpressionChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.AsgDiv] = ChildrenWalkers.walkBinaryExpressionChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.AsgMul] = ChildrenWalkers.walkBinaryExpressionChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.AsgMod] = ChildrenWalkers.walkBinaryExpressionChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.AsgAnd] = ChildrenWalkers.walkBinaryExpressionChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.AsgXor] = ChildrenWalkers.walkBinaryExpressionChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.AsgOr] = ChildrenWalkers.walkBinaryExpressionChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.AsgLsh] = ChildrenWalkers.walkBinaryExpressionChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.AsgRsh] = ChildrenWalkers.walkBinaryExpressionChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.AsgRs2] = ChildrenWalkers.walkBinaryExpressionChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.ConditionalExpression] = ChildrenWalkers.walkTrinaryExpressionChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.LogOr] = ChildrenWalkers.walkBinaryExpressionChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.LogAnd] = ChildrenWalkers.walkBinaryExpressionChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.Or] = ChildrenWalkers.walkBinaryExpressionChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.Xor] = ChildrenWalkers.walkBinaryExpressionChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.And] = ChildrenWalkers.walkBinaryExpressionChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.Eq] = ChildrenWalkers.walkBinaryExpressionChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.Ne] = ChildrenWalkers.walkBinaryExpressionChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.Eqv] = ChildrenWalkers.walkBinaryExpressionChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.NEqv] = ChildrenWalkers.walkBinaryExpressionChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.Lt] = ChildrenWalkers.walkBinaryExpressionChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.Le] = ChildrenWalkers.walkBinaryExpressionChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.Gt] = ChildrenWalkers.walkBinaryExpressionChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.Ge] = ChildrenWalkers.walkBinaryExpressionChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.Add] = ChildrenWalkers.walkBinaryExpressionChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.Sub] = ChildrenWalkers.walkBinaryExpressionChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.Mul] = ChildrenWalkers.walkBinaryExpressionChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.Div] = ChildrenWalkers.walkBinaryExpressionChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.Mod] = ChildrenWalkers.walkBinaryExpressionChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.Lsh] = ChildrenWalkers.walkBinaryExpressionChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.Rsh] = ChildrenWalkers.walkBinaryExpressionChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.Rs2] = ChildrenWalkers.walkBinaryExpressionChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.Not] = ChildrenWalkers.walkUnaryExpressionChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.LogNot] = ChildrenWalkers.walkUnaryExpressionChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.IncPre] = ChildrenWalkers.walkUnaryExpressionChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.DecPre] = ChildrenWalkers.walkUnaryExpressionChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.IncPost] = ChildrenWalkers.walkUnaryExpressionChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.DecPost] = ChildrenWalkers.walkUnaryExpressionChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.TypeAssertion] = ChildrenWalkers.walkUnaryExpressionChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.FuncDecl] = ChildrenWalkers.walkFuncDeclChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.Member] = ChildrenWalkers.walkBinaryExpressionChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.VarDecl] = ChildrenWalkers.walkBoundDeclChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.ArgDecl] = ChildrenWalkers.walkBoundDeclChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.Return] = ChildrenWalkers.walkReturnStatementChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.Break] = ChildrenWalkers.walkNone;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.Continue] = ChildrenWalkers.walkNone;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.Throw] = ChildrenWalkers.walkUnaryExpressionChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.For] = ChildrenWalkers.walkForStatementChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.ForIn] = ChildrenWalkers.walkForInStatementChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.If] = ChildrenWalkers.walkIfStatementChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.While] = ChildrenWalkers.walkWhileStatementChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.DoWhile] = ChildrenWalkers.walkDoWhileStatementChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.Block] = ChildrenWalkers.walkBlockChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.Case] = ChildrenWalkers.walkCaseStatementChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.Switch] = ChildrenWalkers.walkSwitchStatementChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.Try] = ChildrenWalkers.walkTryChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.TryCatch] = ChildrenWalkers.walkTryCatchChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.TryFinally] = ChildrenWalkers.walkTryFinallyChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.Finally] = ChildrenWalkers.walkFinallyChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.Catch] = ChildrenWalkers.walkCatchChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.List] = ChildrenWalkers.walkListChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.Script] = ChildrenWalkers.walkScriptChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.ClassDeclaration] = ChildrenWalkers.walkClassDeclChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.InterfaceDeclaration] = ChildrenWalkers.walkTypeDeclChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.ModuleDeclaration] = ChildrenWalkers.walkModuleDeclChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.ImportDeclaration] = ChildrenWalkers.walkImportDeclChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.With] = ChildrenWalkers.walkWithStatementChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.Label] = ChildrenWalkers.walkLabelChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.LabeledStatement] = ChildrenWalkers.walkLabeledStatementChildren;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.EBStart] = ChildrenWalkers.walkNone;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.GotoEB] = ChildrenWalkers.walkNone;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.EndCode] = ChildrenWalkers.walkNone;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.Error] = ChildrenWalkers.walkNone;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.Comment] = ChildrenWalkers.walkNone;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                this.childrenWalkers[NodeType.Debugger] = ChildrenWalkers.walkNone;
                                     ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
    
                // Verify the code is up to date with the enum
                for (var e in (<any>NodeType)._map) {
                                    ~~~~~~~~
!!! error TS2304: Cannot find name 'NodeType'.
                    if ((<any>this.childrenWalkers)[e] === undefined) {
                        throw new Error("initWalkers function is not up to date with enum content!");
                    }
                }
            }
        }
    
        var globalAstWalkerFactory: AstWalkerFactory;
    
        export function getAstWalkerFactory(): AstWalkerFactory {
            if (!globalAstWalkerFactory) {
                globalAstWalkerFactory = new AstWalkerFactory();
            }
            return globalAstWalkerFactory;
        }
    
        module ChildrenWalkers {
            export function walkNone(preAst: ASTList, parent: AST, walker: IAstWalker): void {
                                             ~~~~~~~
!!! error TS2304: Cannot find name 'ASTList'.
                                                              ~~~
!!! error TS2304: Cannot find name 'AST'.
                // Nothing to do
            }
    
            export function walkListChildren(preAst: ASTList, parent: AST, walker: IAstWalker): void {
                                                     ~~~~~~~
!!! error TS2304: Cannot find name 'ASTList'.
                                                                      ~~~
!!! error TS2304: Cannot find name 'AST'.
                var len = preAst.members.length;
                if (walker.options.reverseSiblings) {
                    for (var i = len - 1; i >= 0; i--) {
                        if (walker.options.goNextSibling) {
                            preAst.members[i] = walker.walk(preAst.members[i], preAst);
                        }
                    }
                }
                else {
                    for (var i = 0; i < len; i++) {
                        if (walker.options.goNextSibling) {
                            preAst.members[i] = walker.walk(preAst.members[i], preAst);
                        }
                    }
                }
            }
    
            export function walkUnaryExpressionChildren(preAst: UnaryExpression, parent: AST, walker: IAstWalker): void {
                                                                ~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'UnaryExpression'.
                                                                                         ~~~
!!! error TS2304: Cannot find name 'AST'.
                if (preAst.castTerm) {
                    preAst.castTerm = walker.walk(preAst.castTerm, preAst);
                }
                if (preAst.operand) {
                    preAst.operand = walker.walk(preAst.operand, preAst);
                }
            }
    
            export function walkBinaryExpressionChildren(preAst: BinaryExpression, parent: AST, walker: IAstWalker): void {
                                                                 ~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'BinaryExpression'.
                                                                                           ~~~
!!! error TS2304: Cannot find name 'AST'.
                if (walker.options.reverseSiblings) {
                    if (preAst.operand2) {
                        preAst.operand2 = walker.walk(preAst.operand2, preAst);
                    }
                    if ((preAst.operand1) && (walker.options.goNextSibling)) {
                        preAst.operand1 = walker.walk(preAst.operand1, preAst);
                    }
                } else {
                    if (preAst.operand1) {
                        preAst.operand1 = walker.walk(preAst.operand1, preAst);
                    }
                    if ((preAst.operand2) && (walker.options.goNextSibling)) {
                        preAst.operand2 = walker.walk(preAst.operand2, preAst);
                    }
                }
            }
    
            export function walkTypeReferenceChildren(preAst: TypeReference, parent: AST, walker: IAstWalker): void {
                                                              ~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'TypeReference'.
                                                                                     ~~~
!!! error TS2304: Cannot find name 'AST'.
                if (preAst.term) {
                    preAst.term = walker.walk(preAst.term, preAst);
                }
            }
    
            export function walkCallExpressionChildren(preAst: CallExpression, parent: AST, walker: IAstWalker): void {
                                                               ~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'CallExpression'.
                                                                                       ~~~
!!! error TS2304: Cannot find name 'AST'.
                if (!walker.options.reverseSiblings) {
                    preAst.target = walker.walk(preAst.target, preAst);
                }
                if (preAst.arguments && (walker.options.goNextSibling)) {
                    preAst.arguments = <ASTList> walker.walk(preAst.arguments, preAst);
                                        ~~~~~~~
!!! error TS2304: Cannot find name 'ASTList'.
                }
                if ((walker.options.reverseSiblings) && (walker.options.goNextSibling)) {
                    preAst.target = walker.walk(preAst.target, preAst);
                }
            }
    
            export function walkTrinaryExpressionChildren(preAst: ConditionalExpression, parent: AST, walker: IAstWalker): void {
                                                                  ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'ConditionalExpression'.
                                                                                                 ~~~
!!! error TS2304: Cannot find name 'AST'.
                if (preAst.operand1) {
                    preAst.operand1 = walker.walk(preAst.operand1, preAst);
                }
                if (preAst.operand2 && (walker.options.goNextSibling)) {
                    preAst.operand2 = walker.walk(preAst.operand2, preAst);
                }
                if (preAst.operand3 && (walker.options.goNextSibling)) {
                    preAst.operand3 = walker.walk(preAst.operand3, preAst);
                }
            }
    
            export function walkFuncDeclChildren(preAst: FuncDecl, parent: AST, walker: IAstWalker): void {
                                                         ~~~~~~~~
!!! error TS2304: Cannot find name 'FuncDecl'.
                                                                           ~~~
!!! error TS2304: Cannot find name 'AST'.
                if (preAst.name) {
                    preAst.name = <Identifier>walker.walk(preAst.name, preAst);
                                   ~~~~~~~~~~
!!! error TS2304: Cannot find name 'Identifier'.
                }
                if (preAst.arguments && (preAst.arguments.members.length > 0) && (walker.options.goNextSibling)) {
                    preAst.arguments = <ASTList>walker.walk(preAst.arguments, preAst);
                                        ~~~~~~~
!!! error TS2304: Cannot find name 'ASTList'.
                }
                if (preAst.returnTypeAnnotation && (walker.options.goNextSibling)) {
                    preAst.returnTypeAnnotation = walker.walk(preAst.returnTypeAnnotation, preAst);
                }
                if (preAst.bod && (preAst.bod.members.length > 0) && (walker.options.goNextSibling)) {
                    preAst.bod = <ASTList>walker.walk(preAst.bod, preAst);
                                  ~~~~~~~
!!! error TS2304: Cannot find name 'ASTList'.
                }
            }
    
            export function walkBoundDeclChildren(preAst: BoundDecl, parent: AST, walker: IAstWalker): void {
                                                          ~~~~~~~~~
!!! error TS2304: Cannot find name 'BoundDecl'.
                                                                             ~~~
!!! error TS2304: Cannot find name 'AST'.
                if (preAst.id) {
                    preAst.id = <Identifier>walker.walk(preAst.id, preAst);
                                 ~~~~~~~~~~
!!! error TS2304: Cannot find name 'Identifier'.
                }
                if (preAst.init) {
                    preAst.init = walker.walk(preAst.init, preAst);
                }
                if ((preAst.typeExpr) && (walker.options.goNextSibling)) {
                    preAst.typeExpr = walker.walk(preAst.typeExpr, preAst);
                }
            }
    
            export function walkReturnStatementChildren(preAst: ReturnStatement, parent: AST, walker: IAstWalker): void {
                                                                ~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'ReturnStatement'.
                                                                                         ~~~
!!! error TS2304: Cannot find name 'AST'.
                if (preAst.returnExpression) {
                    preAst.returnExpression = walker.walk(preAst.returnExpression, preAst);
                }
            }
    
            export function walkForStatementChildren(preAst: ForStatement, parent: AST, walker: IAstWalker): void {
                                                             ~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'ForStatement'.
                                                                                   ~~~
!!! error TS2304: Cannot find name 'AST'.
                if (preAst.init) {
                    preAst.init = walker.walk(preAst.init, preAst);
                }
    
                if (preAst.cond && walker.options.goNextSibling) {
                    preAst.cond = walker.walk(preAst.cond, preAst);
                }
    
                if (preAst.incr && walker.options.goNextSibling) {
                    preAst.incr = walker.walk(preAst.incr, preAst);
                }
    
                if (preAst.body && walker.options.goNextSibling) {
                    preAst.body = walker.walk(preAst.body, preAst);
                }
            }
    
            export function walkForInStatementChildren(preAst: ForInStatement, parent: AST, walker: IAstWalker): void {
                                                               ~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'ForInStatement'.
                                                                                       ~~~
!!! error TS2304: Cannot find name 'AST'.
                preAst.lval = walker.walk(preAst.lval, preAst);
                if (walker.options.goNextSibling) {
                    preAst.obj = walker.walk(preAst.obj, preAst);
                }
                if (preAst.body && (walker.options.goNextSibling)) {
                    preAst.body = walker.walk(preAst.body, preAst);
                }
            }
    
            export function walkIfStatementChildren(preAst: IfStatement, parent: AST, walker: IAstWalker): void {
                                                            ~~~~~~~~~~~
!!! error TS2304: Cannot find name 'IfStatement'.
                                                                                 ~~~
!!! error TS2304: Cannot find name 'AST'.
                preAst.cond = walker.walk(preAst.cond, preAst);
                if (preAst.thenBod && (walker.options.goNextSibling)) {
                    preAst.thenBod = walker.walk(preAst.thenBod, preAst);
                }
                if (preAst.elseBod && (walker.options.goNextSibling)) {
                    preAst.elseBod = walker.walk(preAst.elseBod, preAst);
                }
            }
    
            export function walkWhileStatementChildren(preAst: WhileStatement, parent: AST, walker: IAstWalker): void {
                                                               ~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'WhileStatement'.
                                                                                       ~~~
!!! error TS2304: Cannot find name 'AST'.
                preAst.cond = walker.walk(preAst.cond, preAst);
                if (preAst.body && (walker.options.goNextSibling)) {
                    preAst.body = walker.walk(preAst.body, preAst);
                }
            }
    
            export function walkDoWhileStatementChildren(preAst: DoWhileStatement, parent: AST, walker: IAstWalker): void {
                                                                 ~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'DoWhileStatement'.
                                                                                           ~~~
!!! error TS2304: Cannot find name 'AST'.
                preAst.cond = walker.walk(preAst.cond, preAst);
                if (preAst.body && (walker.options.goNextSibling)) {
                    preAst.body = walker.walk(preAst.body, preAst);
                }
            }
    
            export function walkBlockChildren(preAst: Block, parent: AST, walker: IAstWalker): void {
                                                      ~~~~~
!!! error TS2304: Cannot find name 'Block'.
                                                                     ~~~
!!! error TS2304: Cannot find name 'AST'.
                if (preAst.statements) {
                    preAst.statements = <ASTList>walker.walk(preAst.statements, preAst);
                                         ~~~~~~~
!!! error TS2304: Cannot find name 'ASTList'.
                }
            }
    
            export function walkCaseStatementChildren(preAst: CaseStatement, parent: AST, walker: IAstWalker): void {
                                                              ~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'CaseStatement'.
                                                                                     ~~~
!!! error TS2304: Cannot find name 'AST'.
                if (preAst.expr) {
                    preAst.expr = walker.walk(preAst.expr, preAst);
                }
    
                if (preAst.body && walker.options.goNextSibling) {
                    preAst.body = <ASTList>walker.walk(preAst.body, preAst);
                                   ~~~~~~~
!!! error TS2304: Cannot find name 'ASTList'.
                }
            }
    
            export function walkSwitchStatementChildren(preAst: SwitchStatement, parent: AST, walker: IAstWalker): void {
                                                                ~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'SwitchStatement'.
                                                                                         ~~~
!!! error TS2304: Cannot find name 'AST'.
                if (preAst.val) {
                    preAst.val = walker.walk(preAst.val, preAst);
                }
    
                if ((preAst.caseList) && walker.options.goNextSibling) {
                    preAst.caseList = <ASTList>walker.walk(preAst.caseList, preAst);
                                       ~~~~~~~
!!! error TS2304: Cannot find name 'ASTList'.
                }
            }
    
            export function walkTryChildren(preAst: Try, parent: AST, walker: IAstWalker): void {
                                                    ~~~
!!! error TS2304: Cannot find name 'Try'.
                                                                 ~~~
!!! error TS2304: Cannot find name 'AST'.
                if (preAst.body) {
                    preAst.body = walker.walk(preAst.body, preAst);
                }
            }
    
            export function walkTryCatchChildren(preAst: TryCatch, parent: AST, walker: IAstWalker): void {
                                                         ~~~~~~~~
!!! error TS2304: Cannot find name 'TryCatch'.
                                                                           ~~~
!!! error TS2304: Cannot find name 'AST'.
                if (preAst.tryNode) {
                    preAst.tryNode = <Try>walker.walk(preAst.tryNode, preAst);
                                      ~~~
!!! error TS2304: Cannot find name 'Try'.
                }
    
                if ((preAst.catchNode) && walker.options.goNextSibling) {
                    preAst.catchNode = <Catch>walker.walk(preAst.catchNode, preAst);
                                        ~~~~~
!!! error TS2304: Cannot find name 'Catch'.
                }
            }
    
            export function walkTryFinallyChildren(preAst: TryFinally, parent: AST, walker: IAstWalker): void {
                                                           ~~~~~~~~~~
!!! error TS2304: Cannot find name 'TryFinally'.
                                                                               ~~~
!!! error TS2304: Cannot find name 'AST'.
                if (preAst.tryNode) {
                    preAst.tryNode = walker.walk(preAst.tryNode, preAst);
                }
    
                if (preAst.finallyNode && walker.options.goNextSibling) {
                    preAst.finallyNode = <Finally>walker.walk(preAst.finallyNode, preAst);
                                          ~~~~~~~
!!! error TS2304: Cannot find name 'Finally'.
                }
            }
    
            export function walkFinallyChildren(preAst: Finally, parent: AST, walker: IAstWalker): void {
                                                        ~~~~~~~
!!! error TS2304: Cannot find name 'Finally'.
                                                                         ~~~
!!! error TS2304: Cannot find name 'AST'.
                if (preAst.body) {
                    preAst.body = walker.walk(preAst.body, preAst);
                }
            }
    
            export function walkCatchChildren(preAst: Catch, parent: AST, walker: IAstWalker): void {
                                                      ~~~~~
!!! error TS2304: Cannot find name 'Catch'.
                                                                     ~~~
!!! error TS2304: Cannot find name 'AST'.
                if (preAst.param) {
                    preAst.param = <VarDecl>walker.walk(preAst.param, preAst);
                                    ~~~~~~~
!!! error TS2304: Cannot find name 'VarDecl'.
                }
    
                if ((preAst.body) && walker.options.goNextSibling) {
                    preAst.body = walker.walk(preAst.body, preAst);
                }
            }
    
            export function walkRecordChildren(preAst: NamedDeclaration, parent: AST, walker: IAstWalker): void {
                                                       ~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'NamedDeclaration'.
                                                                                 ~~~
!!! error TS2304: Cannot find name 'AST'.
                preAst.name = <Identifier>walker.walk(preAst.name, preAst);
                               ~~~~~~~~~~
!!! error TS2304: Cannot find name 'Identifier'.
                if (walker.options.goNextSibling && preAst.members) {
                    preAst.members = <ASTList>walker.walk(preAst.members, preAst);
                                      ~~~~~~~
!!! error TS2304: Cannot find name 'ASTList'.
                }
    
            }
    
            export function walkNamedTypeChildren(preAst: TypeDeclaration, parent: AST, walker: IAstWalker): void {
                                                          ~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'TypeDeclaration'.
                                                                                   ~~~
!!! error TS2304: Cannot find name 'AST'.
                walkRecordChildren(preAst, parent, walker);
            }
    
            export function walkClassDeclChildren(preAst: ClassDeclaration, parent: AST, walker: IAstWalker): void {
                                                          ~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'ClassDeclaration'.
                                                                                    ~~~
!!! error TS2304: Cannot find name 'AST'.
                walkNamedTypeChildren(preAst, parent, walker);
    
                if (walker.options.goNextSibling && preAst.extendsList) {
                    preAst.extendsList = <ASTList>walker.walk(preAst.extendsList, preAst);
                                          ~~~~~~~
!!! error TS2304: Cannot find name 'ASTList'.
                }
    
                if (walker.options.goNextSibling && preAst.implementsList) {
                    preAst.implementsList = <ASTList>walker.walk(preAst.implementsList, preAst);
                                             ~~~~~~~
!!! error TS2304: Cannot find name 'ASTList'.
                }
            }
    
            export function walkScriptChildren(preAst: Script, parent: AST, walker: IAstWalker): void {
                                                       ~~~~~~
!!! error TS2304: Cannot find name 'Script'.
                                                                       ~~~
!!! error TS2304: Cannot find name 'AST'.
                if (preAst.bod) {
                    preAst.bod = <ASTList>walker.walk(preAst.bod, preAst);
                                  ~~~~~~~
!!! error TS2304: Cannot find name 'ASTList'.
                }
            }
    
            export function walkTypeDeclChildren(preAst: InterfaceDeclaration, parent: AST, walker: IAstWalker): void {
                                                         ~~~~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'InterfaceDeclaration'.
                                                                                       ~~~
!!! error TS2304: Cannot find name 'AST'.
                walkNamedTypeChildren(preAst, parent, walker);
    
                // walked arguments as part of members
                if (walker.options.goNextSibling && preAst.extendsList) {
                    preAst.extendsList = <ASTList>walker.walk(preAst.extendsList, preAst);
                                          ~~~~~~~
!!! error TS2304: Cannot find name 'ASTList'.
                }
    
                if (walker.options.goNextSibling && preAst.implementsList) {
                    preAst.implementsList = <ASTList>walker.walk(preAst.implementsList, preAst);
                                             ~~~~~~~
!!! error TS2304: Cannot find name 'ASTList'.
                }
            }
    
            export function walkModuleDeclChildren(preAst: ModuleDeclaration, parent: AST, walker: IAstWalker): void {
                                                           ~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'ModuleDeclaration'.
                                                                                      ~~~
!!! error TS2304: Cannot find name 'AST'.
                walkRecordChildren(preAst, parent, walker);
            }
    
            export function walkImportDeclChildren(preAst: ImportDeclaration, parent: AST, walker: IAstWalker): void {
                                                           ~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'ImportDeclaration'.
                                                                                      ~~~
!!! error TS2304: Cannot find name 'AST'.
                if (preAst.id) {
                    preAst.id = <Identifier>walker.walk(preAst.id, preAst);
                                 ~~~~~~~~~~
!!! error TS2304: Cannot find name 'Identifier'.
                }
                if (preAst.alias) {
                    preAst.alias = walker.walk(preAst.alias, preAst);
                }
            }
    
            export function walkWithStatementChildren(preAst: WithStatement, parent: AST, walker: IAstWalker): void {
                                                              ~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'WithStatement'.
                                                                                     ~~~
!!! error TS2304: Cannot find name 'AST'.
                if (preAst.expr) {
                    preAst.expr = walker.walk(preAst.expr, preAst);
                }
    
                if (preAst.body && walker.options.goNextSibling) {
                    preAst.body = walker.walk(preAst.body, preAst);
                }
            }
    
            export function walkLabelChildren(preAst: Label, parent: AST, walker: IAstWalker): void {
                                                      ~~~~~
!!! error TS2304: Cannot find name 'Label'.
                                                                     ~~~
!!! error TS2304: Cannot find name 'AST'.
                //TODO: Walk "id"?
            }
    
            export function walkLabeledStatementChildren(preAst: LabeledStatement, parent: AST, walker: IAstWalker): void {
                                                                 ~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'LabeledStatement'.
                                                                                           ~~~
!!! error TS2304: Cannot find name 'AST'.
                preAst.labels = <ASTList>walker.walk(preAst.labels, preAst);
                                 ~~~~~~~
!!! error TS2304: Cannot find name 'ASTList'.
                if (walker.options.goNextSibling) {
                    preAst.stmt = walker.walk(preAst.stmt, preAst);
                }
            }
        }
    }